# advancedrag_llm

./: .env.example  CHANGELOG.md  FILES_CHANGED.md  README.md  app.py  claude.md  langgraph.json  pyproject.toml  requirements.txt  test_vllm_simple.py
.claude/: settings.local.json
scripts/: extract_terms.py  fix_document_type.py  ingest_documents.py  test_bm25_search.py
src/core/: rag_system.py
src/rag/: config.py  evaluator.py  ingestion.py  prompts.py  retriever.py  reverse_lookup.py  term_extraction.py  text_processor.py  vllm_client.py
src/rag/pdf_processors/: azure_di_processor.py
src/ui/: chat_tab.py  dictionary_tab.py  documents_tab.py  evaluation_tab.py  settings_tab.py  sidebar.py  state.py
src/utils/: helpers.py
