[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advancedrag_llm"
version = "0.1.0"
description = "Advanced RAG system with LangGraph-based term extraction"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
